--- a/demo-SiAbDi/index.html
+++ b/demo-SiAbDi/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo SiAbDi</title>
-    <link rel="icon" type="image/png" href="./imgsiabdi.png">
+    <link rel="icon" type="image/png" href="./demo-SiAbDi/imgsiabdi.png">
     <style>
         /* CSS agar aplikasi memenuhi layar dan ringan */
         body, html {
