--- a/demo-SiDiMAS/index.html
+++ b/demo-SiDiMAS/index.html
@@ -1,1 +1,40 @@
-ddd
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Demo SiDiMAS</title>
+    <link rel="icon" type="image/png" href="./imgsidimas.png">
+    <style>
+        /* CSS agar aplikasi memenuhi layar dan ringan */
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+            font-family: sans-serif;
+        }
+        #container {
+            width: 100%;
+            height: 100vh;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
+</head>
+<body>
+
+    <div id="container">
+        <iframe 
+            src="https://script.google.com/macros/s/AKfycbxbf5MS7ChL8ltAbh-Z8zV48J0f62OV2eqv_O9Bw_56DhatQlk56SH9VD4-G3N7Cb8F1Q/exec" 
+            allow="camera; microphone; geolocation" 
+            sandbox="allow-scripts allow-forms allow-popups allow-same-origin"
+            loading="lazy">
+        </iframe>
+    </div>
+
+</body>
+</html>
