--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fary EdTech - Demo App Gallery</title>
-    <link rel="icon" type="image/png" href="logo.png?v=2">
+    <link rel="icon" type="image/png" href="./logo.png?v=2">
     <style>
         :root {
             --primary: #2563eb;
@@ -104,11 +104,19 @@
 <body>
 
     <header>
-        <h1>Fary EdTech App Gallery</h1>
-        <p>Pilih salah satu aplikasi demo di bawah ini</p>
+        <h1>Fary EdTech - AppShop</h1>
+        <p>Butuh Aplikasi Digital untuk Sekolah Mu???? <br> langsung aja klik tombol dibawah ini</p>
     </header>
 
-    <div class="app-grid">
+        <center></center><div class="app-grid">
+        <a href="https://www.fary-edtech.my.id/" class="app-card">
+            <div img=" "></div>
+            <h3>FARY EDTECH</h3>
+            <p>Inovasi Teknologi untuk Pendidikan Masa Depan</p>
+            <div class="badge">ENTER</div>
+        </a>  </div> </center>
+    
+   <!-- <div class="app-grid">
         <a href="demo-SiAbDi/" class="app-card">
             <div class="icon-box">📸</div>
             <h3>SiAbDi</h3>
@@ -164,7 +172,7 @@
             <p>Laporan harian otomatis ke email.</p>
             <div class="badge">Demo</div>
         </a>
-    </div>
+    </div> -->
 
 </body>
 </html>
