--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
         <p>Butuh Aplikasi Digital untuk Sekolah Mu???? <br> langsung aja klik tombol dibawah ini</p>
     </header>
 
-        <center></center><div class="app-grid">
-        <a href="https://www.fary-edtech.my.id/" class="app-card">
+       <div class="app-grid">
+         <center><a href="https://www.fary-edtech.my.id/" class="app-card">
             <div img=" "></div>
             <h3>FARY EDTECH</h3>
             <p>Inovasi Teknologi untuk Pendidikan Masa Depan</p>
             <div class="badge">ENTER</div>
-        </a>  </div> </center>
+        </a> </center> </div> 
     
    <!-- <div class="app-grid">
         <a href="demo-SiAbDi/" class="app-card">
