--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
 
     <header>
         <h1>Fary EdTech - AppShop</h1>
-        <p>Butuh Aplikasi Digital untuk Sekolah Mu???? <br> langsung aja klik tombol dibawah ini</p>
+        <p>Butuh Aplikasi Digital untuk Sekolah Mu???? <br> Langsung aja klik tombol dibawah ini</p>
     </header>
 
        <div class="app-grid">
          <center><a href="https://www.fary-edtech.my.id/" class="app-card">
-            <div img=" "></div>
+            <div class="icon-box">🔍</div>
             <h3>FARY EDTECH</h3>
             <p>Inovasi Teknologi untuk Pendidikan Masa Depan</p>
             <div class="badge">ENTER</div>
