--- a/demo-SiAbDi/index.html
+++ b/demo-SiAbDi/index.html
@@ -28,12 +28,21 @@
 <body>
 
     <div id="container">
-        <iframe 
-            src="https://script.google.com/macros/s/AKfycbylyp2KAF_Mbl8vPBQk0zOkTQi0RjwBUKwXRpuuWf7J254p6g69Sr6144iPPhgFE8vd/exec" 
-            allow="camera; microphone; geolocation" 
-            sandbox="allow-scripts allow-forms allow-popups allow-same-origin"
-            loading="lazy">
-        </iframe>
+    <iframe 
+ src="https://script.google.com/macros/s/AKfycbylyp2KAF_Mbl8vPBQk0zOkTQi0RjwBUKwXRpuuWf7J254p6g69Sr6144iPPhgFE8vd/exec"  
+  width="100%" 
+  height="700px" 
+  style="border:none;"
+  
+  /* Memberikan izin fitur sistem & unduhan */
+  sandbox="allow-downloads allow-forms allow-modals allow-popups allow-popups-to-escape-sandbox allow-scripts allow-same-origin"
+  
+  /* Memberikan izin akses hardware & fitur browser */
+  allow="camera; microphone; geolocation; clipboard-write; display-capture; publickey-credentials-get"
+  
+  /* Memastikan layar penuh diizinkan jika diperlukan */
+  allowfullscreen>
+</iframe>
     </div>
 
 </body>
