--- a/demo-SiE-MPuS/index.html
+++ b/demo-SiE-MPuS/index.html
@@ -30,10 +30,15 @@
     <div id="container">
         <iframe 
             src="https://script.google.com/macros/s/AKfycbwwQ2SIUE3JqwnF061Iyd64hgWApwhXFL4kiZ9nWJ29P-oGrO7LofhLDoLwStFv-SYcNA/exec" 
-            allow="camera; microphone; geolocation" 
-            sandbox="allow-scripts allow-forms allow-popups allow-same-origin"
-            loading="lazy">
-        </iframe>
+              width="100%" 
+  height="700px" 
+  style="border:none;"
+
+  sandbox="allow-downloads allow-forms allow-modals allow-popups allow-popups-to-escape-sandbox allow-scripts allow-same-origin"
+  allow="camera; microphone; geolocation; clipboard-write; display-capture; publickey-credentials-get"
+  allowfullscreen>
+</iframe>
+    </div>
     </div>
 
 </body>
