--- a/demo-SiKaPProfESi/index.html
+++ b/demo-SiKaPProfESi/index.html
@@ -30,10 +30,14 @@
     <div id="container">
         <iframe 
             src="https://script.google.com/macros/s/AKfycbw6oqtjjVaJlgg696nNlKb7YVK13ZmfTb2z_Gc7ct9-jMz65iMlGLoR2ZqpeZVw8Zmg9g/exec" 
-            allow="camera; microphone; geolocation" 
-            sandbox="allow-scripts allow-forms allow-popups allow-same-origin"
-            loading="lazy">
-        </iframe>
+            width="100%" 
+  height="700px" 
+  style="border:none;"
+  sandbox="allow-downloads allow-forms allow-modals allow-popups allow-popups-to-escape-sandbox allow-scripts allow-same-origin"
+  allow="camera; microphone; geolocation; clipboard-write; display-capture; publickey-credentials-get"
+  allowfullscreen>
+</iframe>
+    </div>
     </div>
 
 </body>
