--- a/demo-SiDiMAS/index.html
+++ b/demo-SiDiMAS/index.html
@@ -30,9 +30,7 @@
     <div id="container">
         <iframe 
  src="https://script.google.com/macros/s/AKfycbxbf5MS7ChL8ltAbh-Z8zV48J0f62OV2eqv_O9Bw_56DhatQlk56SH9VD4-G3N7Cb8F1Q/exec" 
-  width="100%" 
-  height="700px" 
-  style="border:none;"
+  style="width: 100%; height: 95vh; border: none;"
   loading="eager"
   sandbox="allow-downloads allow-forms allow-modals allow-popups allow-popups-to-escape-sandbox allow-scripts allow-same-origin"
   allow="camera; microphone; geolocation; clipboard-write; display-capture; publickey-credentials-get"
