--- a/demo-SiE-MPuS/index.html
+++ b/demo-SiE-MPuS/index.html
@@ -30,9 +30,7 @@
     <div id="container">
         <iframe 
             src="https://script.google.com/macros/s/AKfycbwwQ2SIUE3JqwnF061Iyd64hgWApwhXFL4kiZ9nWJ29P-oGrO7LofhLDoLwStFv-SYcNA/exec" 
-              width="100%" 
-  height="700px" 
-  style="border:none;"
+  style="width: 100%; height: 95vh; border: none;"
   loading="eager"
   sandbox="allow-downloads allow-forms allow-modals allow-popups allow-popups-to-escape-sandbox allow-scripts allow-same-origin"
   allow="camera; microphone; geolocation; clipboard-write; display-capture; publickey-credentials-get"
