--- a/demo-SiAbDi/index.html
+++ b/demo-SiAbDi/index.html
@@ -73,7 +73,7 @@
 
                 <center>
                     <div class="judul-container flex items-center justify-center gap-2">
-                        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiBg-h7yQ6aBqgL71tbuETsepWQpv0heHLgIeyhEQGz60PhLI1zk59riPeJoqxGoYzdB-bX4NQOI7ljmDPEOZkBgR14mgvw3p0gJv0q4VLiM26WfwRpAlrMVhLujlWqfUBPsaK84nYbJ6Sdi4oXwBEV5AzaBHvsgfFATXVBeV6M9zJTzd3LQzHylWrDTs5o/s425/logo%20siabdi%20ok.png" alt="Logo" class="w-8 lg:w-[50px]">
+                        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiBg-h7yQ6aBqgL71tbuETsepWQpv0heHLgIeyhEQGz60PhLI1zk59riPeJoqxGoYzdB-bX4NQOI7ljmDPEOZkBgR14mgvw3p0gJv0q4VLiM26WfwRpAlrMVhLujlWqfUBPsaK84nYbJ6Sdi4oXwBEV5AzaBHvsgfFATXVBeV6M9zJTzd3LQzHylWrDTs5o/s425/logo%20siabdi%20ok.png" alt="Logo" class="w-8 lg:w-[50px] object-contain">
                         <h1 class="text-3xl lg:text-5xl font-bold leading-tight mb-0 text-transparent bg-clip-text bg-gradient-to-r from-white to-indigo-200 drop-shadow-sm mt-0"> SiAbDi </h1>
                     </div>
                     <p class="font-bold text-xs lg:text-sm text-white mt-1">Sistem Absensi Digital</p>
@@ -97,7 +97,7 @@
             <div class="w-full max-w-md mx-auto">
                 <div class="text-center lg:text-left mb-6 lg:mb-10">
                     <center>
-                        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiBg-h7yQ6aBqgL71tbuETsepWQpv0heHLgIeyhEQGz60PhLI1zk59riPeJoqxGoYzdB-bX4NQOI7ljmDPEOZkBgR14mgvw3p0gJv0q4VLiM26WfwRpAlrMVhLujlWqfUBPsaK84nYbJ6Sdi4oXwBEV5AzaBHvsgfFATXVBeV6M9zJTzd3LQzHylWrDTs5o/s425/logo%20siabdi%20ok.png" class="w-12 lg:w-[70px]">
+                        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiBg-h7yQ6aBqgL71tbuETsepWQpv0heHLgIeyhEQGz60PhLI1zk59riPeJoqxGoYzdB-bX4NQOI7ljmDPEOZkBgR14mgvw3p0gJv0q4VLiM26WfwRpAlrMVhLujlWqfUBPsaK84nYbJ6Sdi4oXwBEV5AzaBHvsgfFATXVBeV6M9zJTzd3LQzHylWrDTs5o/s425/logo%20siabdi%20ok.png" class="w-12 lg:w-[70px] object-contain" >
                         <h2 class="text-xl lg:text-2xl font-bold text-gray-900 mt-2" style="color:indigo;">Welcome to SiAbDi</h2>
                         <p class="text-gray-500 text-xs lg:text-sm mt-1">Silakan login ke akun Anda</p>
                     </center>
