--- a/demo-SiBukInSTal/index.html
+++ b/demo-SiBukInSTal/index.html
@@ -427,8 +427,7 @@
 // KONFIGURASI API (GANTI URL INI)
 // ==========================================
 // Ganti URL di bawah ini dengan URL Web App Google Apps Script kamu yang sudah dideploy baru!
-const API_URL = "https://script.google.com/a/macros/admin.sma.belajar.id/s/AKfycbzJawTEx7To4u0QTlTNofWXegbgjSEoNm85KrxTsQUu6kqpVS-BSoOTqYnrBcZscj4tog/exec
-"; 
+const API_URL = "https://script.google.com/a/macros/admin.sma.belajar.id/s/AKfycby6oZniPTITTPxChh2g7lF-nULwpoLc136dAcSXst27eiJ5FtFPm2KZLBMpBVBm_fs9fA"; 
 
 let globalSiswa=[], curSmt=1, cropper, cropTarget, curPage='dash';
 let globalMapel = []; // <--- KANTONG MAPEL
