--- a/demo-SiBukInSTal/index.html
+++ b/demo-SiBukInSTal/index.html
@@ -697,13 +697,13 @@ async function cetakPDF(nis) {
 
     // 3. Bangun kerangka HTML persis seperti desain aslinya
     const html = `
-        <div style="font-family: 'Arial', sans-serif; font-size: 11pt; padding: 20px; color: #000; background: #fff;">
+        <div style="font-family: 'Arial', sans-serif; font-size: 11pt; padding: 0px; color: #000; background: #fff;">
             <table style="width: 100%; border-collapse: collapse;">
                 <tr>
                     <td width="15%" align="center">${imgInstansi ? `<img src="${imgInstansi}" style="width: 2.5cm;">` : ''}</td>
                     <td width="70%" style="text-align: center; line-height: 1.2;">
-                        <div style="font-size:14pt; font-weight:bold; text-transform:uppercase;">${globalConf.nama_instansi || ''}</div>
-                        <div style="font-size:17pt; font-weight:bold; text-transform:uppercase;">${globalConf.nama_sekolah || ''}</div>
+                        <div style="font-size:13pt; font-weight:bold; text-transform:uppercase;">${globalConf.nama_instansi || ''}</div>
+                        <div style="font-size:16pt; font-weight:bold; text-transform:uppercase;">${globalConf.nama_sekolah || ''}</div>
                         <div style="font-size:9pt;">${globalConf.alamat_sekolah || ''}</div>
                     </td>
                     <td width="15%" align="center">${imgSekolah ? `<img src="${imgSekolah}" style="width: 2.5cm;">` : ''}</td>
@@ -748,7 +748,7 @@ async function cetakPDF(nis) {
     `;
 
     // 4. Proses HTML menjadi PDF
-    var opt = { margin: 1, filename: 'Biodata_' + s[2] + '.pdf', image: { type: 'jpeg', quality: 0.98 }, html2canvas: { scale: 2 }, jsPDF: { unit: 'cm', format: 'a4', orientation: 'portrait' } };
+    var opt = { margin: 1, filename: 'Biodata_' + s[2] + '.pdf', image: { type: 'jpeg', quality: 0.98 }, html2canvas: { scale: 2 }, jsPDF: { unit: 'cm', format: 'F4', orientation: 'portrait' } };
     html2pdf().set(opt).from(html).save().then(() => { $('#loader').addClass('hidden'); });
 }
 
@@ -788,17 +788,17 @@ async function cetakTranskrip() {
                 <tr><td width="15%">Nama</td><td>: ${namaSiswa}</td><td width="15%">NIS/NISN</td><td>: ${nis}</td></tr>
             </table>
             <table style="width: 100%; border-collapse: collapse; text-align: center; font-size: 8pt;" border="1">
-                <thead>
-                    <tr style="background-color:#eee;">
-                        <th rowspan="2" width="15%" style="padding:4px;">Mata Pelajaran</th>
-                        <th colspan="3" style="padding:4px;">Smt 1</th><th colspan="3" style="padding:4px;">Smt 2</th><th colspan="3" style="padding:4px;">Smt 3</th>
-                        <th colspan="3" style="padding:4px;">Smt 4</th><th colspan="3" style="padding:4px;">Smt 5</th><th colspan="3" style="padding:4px;">Smt 6</th>
-                    </tr>
-                    <tr style="background-color:#eee;">
-                        <th>P</th><th>K</th><th>S</th><th>P</th><th>K</th><th>S</th><th>P</th><th>K</th><th>S</th>
-                        <th>P</th><th>K</th><th>S</th><th>P</th><th>K</th><th>S</th><th>P</th><th>K</th><th>S</th>
-                    </tr>
-                </thead>
+                 <thead>
+          <tr style="background-color:#eee;">
+            <th rowspan="2" width="3%">No</th><th rowspan="2" width="15%">Mata Pelajaran</th>
+            <th colspan="3">Semester 1</th><th colspan="3">Semester 2</th><th colspan="3">Semester 3</th>
+            <th colspan="3">Semester 4</th><th colspan="3">Semester 5</th><th colspan="3">Semester 6</th>
+          </tr>
+          <tr style="background-color:#eee;">
+            <th>P</th><th>K</th><th>S</th><th>P</th><th>K</th><th>S</th><th>P</th><th>K</th><th>S</th>
+            <th>P</th><th>K</th><th>S</th><th>P</th><th>K</th><th>S</th><th>P</th><th>K</th><th>S</th>
+          </tr>
+        </thead>
                 <tbody>${tbodyHtml}</tbody>
                 <tfoot>${tfootHtml}</tfoot>
             </table>
