--- a/demo-SiBukInSTal/index.html
+++ b/demo-SiBukInSTal/index.html
@@ -748,7 +748,7 @@ async function cetakPDF(nis) {
     `;
 
     // 4. Proses HTML menjadi PDF
-    var opt = { margin: 1, filename: 'Biodata_' + s[2] + '.pdf', image: { type: 'jpeg', quality: 0.98 }, html2canvas: { scale: 2 }, jsPDF: { unit: 'cm', format: 'F4', orientation: 'portrait' } };
+    var opt = { margin: 0.3, filename: 'Biodata_' + s[2] + '.pdf', image: { type: 'jpeg', quality: 0.98 }, html2canvas: { scale: 2 }, jsPDF: { unit: 'cm', format: 'Folio', orientation: 'portrait' } };
     html2pdf().set(opt).from(html).save().then(() => { $('#loader').addClass('hidden'); });
 }
 
