--- a/demo-SiBukInSTal/index.html
+++ b/demo-SiBukInSTal/index.html
@@ -701,7 +701,7 @@ async function cetakPDF(nis) {
             <table style="width: 100%; border-collapse: collapse;">
                 <tr>
                     <td width="15%" align="center">${imgInstansi ? `<img src="${imgInstansi}" style="width: 2.5cm;">` : ''}</td>
-                    <td width="70%" style="text-align: center; line-height: 1;">
+                    <td width="70%" style="text-align: center; line-height: 1.2;">
                         <div style="font-size:13pt; font-weight:bold; text-transform:uppercase;">${globalConf.nama_instansi || ''}</div>
                         <div style="font-size:16pt; font-weight:bold; text-transform:uppercase;">${globalConf.nama_sekolah || ''}</div>
                         <div style="font-size:9pt;">${globalConf.alamat_sekolah || ''}</div>
@@ -713,34 +713,34 @@ async function cetakPDF(nis) {
             <div style="text-align:center; font-weight:bold; text-decoration:underline; font-size:14pt; margin-bottom:20px;">LEMBAR BUKU INDUK SISWA</div>
             <table style="width: 100%; border-collapse: collapse;">
                 <tr><td style="width: 35%; padding: 4px; vertical-align: top;">1. Nama Lengkap</td><td style="width: 2%;">:</td><td style="width: 63%; font-weight: bold;">${s[2]}</td></tr>
-                <tr><td style="padding: 3px; vertical-align: top;">2. NIS / NISN</td><td>:</td><td style="font-weight: bold;">${s[0]} / ${s[1]}</td></tr>
-                <tr><td style="padding: 3px; vertical-align: top;">3. NIK / No.KK</td><td>:</td><td style="font-weight: bold;">${s[3]} / ${s[4]}</td></tr>
-                <tr><td style="padding: 3px; vertical-align: top;">4. TTL</td><td>:</td><td style="font-weight: bold;">${s[5]}, ${s[6]}</td></tr>
-                <tr><td style="padding: 3px; vertical-align: top;">5. Jenis Kelamin</td><td>:</td><td style="font-weight: bold;">${s[7] == 'L' ? 'Laki-laki' : 'Perempuan'}</td></tr>
-                <tr><td style="padding: 3px; vertical-align: top;">6. Agama</td><td>:</td><td style="font-weight: bold;">${s[8]}</td></tr>
-                <tr><td style="padding: 3px; vertical-align: top;">7. Anak ke </td><td>:</td><td style="font-weight: bold;">${s[9]} dari ${s[10]} bersaudara</td></tr>
-                <tr><td style="padding: 3px; vertical-align: top;">8. Tinggi/Berat/Goldar</td><td>:</td><td style="font-weight: bold;">${s[16]} cm / ${s[17]} Kg / ${s[18]}</td></tr>
-                <tr><td style="padding: 3px; vertical-align: top;">9. Alamat</td><td>:</td><td style="font-weight: bold;">${s[12]}</td></tr>
-                <tr><td style="padding: 3px; vertical-align: top;">10. No.HP</td><td>:</td><td style="font-weight: bold;">${s[13]}</td></tr>
-                <tr><td style="padding: 3px; vertical-align: top;">11. Nama Ayah/Tgl.Lahir/Pek.</td><td>:</td><td style="font-weight: bold;">${s[20]} / ${s[21] || '-'} (${s[22]})</td></tr> 
-                <tr><td style="padding: 3px; vertical-align: top;">12. Nama Ibu/Tgl.Lahir/Pek.</td><td>:</td><td style="font-weight: bold;">${s[23]} / ${s[24] || '-'} (${s[25]})</td></tr>
-                <tr><td style="padding: 3px; vertical-align: top;">13. Pindahan/Lulusan dari</td><td>:</td><td style="font-weight: bold;">${s[26]} / ${s[27]}</td></tr>
-                <tr><td style="padding: 3px; vertical-align: top;">14. Diterima Tgl</td><td>:</td><td style="font-weight: bold;">${s[30]} di Kelas ${s[29]}</td></tr>
-                <tr><td style="padding: 3px; vertical-align: top;">15. Status Akhir</td><td>:</td><td style="font-weight: bold;">${s[31]}</td></tr>
-                <tr><td style="padding: 3px; vertical-align: top;">16. Lulus/Keluar Tgl</td><td>:</td><td style="font-weight: bold;">${s[32]}</td></tr>
-                <tr><td style="padding: 3px; vertical-align: top;">17. No. Ijazah SLTA</td><td>:</td><td style="font-weight: bold;">${s[34]} </td></tr>
+                <tr><td style="padding: 4px; vertical-align: top;">2. NIS / NISN</td><td>:</td><td style="font-weight: bold;">${s[0]} / ${s[1]}</td></tr>
+                <tr><td style="padding: 4px; vertical-align: top;">3. NIK / No.KK</td><td>:</td><td style="font-weight: bold;">${s[3]} / ${s[4]}</td></tr>
+                <tr><td style="padding: 4px; vertical-align: top;">4. TTL</td><td>:</td><td style="font-weight: bold;">${s[5]}, ${s[6]}</td></tr>
+                <tr><td style="padding: 4px; vertical-align: top;">5. Jenis Kelamin</td><td>:</td><td style="font-weight: bold;">${s[7] == 'L' ? 'Laki-laki' : 'Perempuan'}</td></tr>
+                <tr><td style="padding: 4px; vertical-align: top;">6. Agama</td><td>:</td><td style="font-weight: bold;">${s[8]}</td></tr>
+                <tr><td style="padding: 4px; vertical-align: top;">7. Anak ke </td><td>:</td><td style="font-weight: bold;">${s[9]} dari ${s[10]} bersaudara</td></tr>
+                <tr><td style="padding: 4px; vertical-align: top;">8. Tinggi/Berat/Goldar</td><td>:</td><td style="font-weight: bold;">${s[16]} cm / ${s[17]} Kg / ${s[18]}</td></tr>
+                <tr><td style="padding: 4px; vertical-align: top;">9. Alamat</td><td>:</td><td style="font-weight: bold;">${s[12]}</td></tr>
+                <tr><td style="padding: 4px; vertical-align: top;">10. No.HP</td><td>:</td><td style="font-weight: bold;">${s[13]}</td></tr>
+                <tr><td style="padding: 4px; vertical-align: top;">11. Nama Ayah/Tgl.Lahir/Pek.</td><td>:</td><td style="font-weight: bold;">${s[20]} / ${s[21] || '-'} (${s[22]})</td></tr>
+                <tr><td style="padding: 4px; vertical-align: top;">12. Nama Ibu/Tgl.Lahir/Pek.</td><td>:</td><td style="font-weight: bold;">${s[23]} / ${s[24] || '-'} (${s[25]})</td></tr>
+                <tr><td style="padding: 4px; vertical-align: top;">13. Pindahan/Lulusan dari</td><td>:</td><td style="font-weight: bold;">${s[26]} / ${s[27]}</td></tr>
+                <tr><td style="padding: 4px; vertical-align: top;">14. Diterima Tgl</td><td>:</td><td style="font-weight: bold;">${s[30]} di Kelas ${s[29]}</td></tr>
+                <tr><td style="padding: 4px; vertical-align: top;">15. Status Akhir</td><td>:</td><td style="font-weight: bold;">${s[31]}</td></tr>
+                <tr><td style="padding: 4px; vertical-align: top;">16. Lulus/Keluar Tgl</td><td>:</td><td style="font-weight: bold;">${s[32]}</td></tr>
+                <tr><td style="padding: 4px; vertical-align: top;">17. No. Ijazah SLTA</td><td>:</td><td style="font-weight: bold;">${s[34]} </td></tr>
             </table>
         
             <table style="width: 100%; border-collapse: collapse; margin-top: 10px;">
                 <tr>
                     <td align="center" width="40%"><div>Foto Masuk</div><br>${imgMasuk ? `<img src="${imgMasuk}" style="width: 3cm; height: 4cm; border: 1px solid #000; object-fit: cover;">` : '<div style="width: 3cm; height: 4cm; border: 1px solid #000; line-height:4cm; text-align:center;">Tidak Ada</div>'}</td>
-                    <td align="center" width="10%"></td>
+                    
                     <td align="center" width="30%"><div>Foto Keluar</div><br>${imgKeluar ? `<img src="${imgKeluar}" style="width: 3cm; height: 4cm; border: 1px solid #000; object-fit: cover;">` : '<div style="width: 3cm; height: 4cm; border: 1px solid #000; line-height:4cm; text-align:center;">Tidak Ada</div>'}</td>
                 </tr>
             </table>
             <br>
             <div style="float:right; text-align:center; width:40%;">
-                '..............,' ${tglSekarang}<br>Kepala Sekolah,<br><br><br><br><br>
+                ..............,  ${tglSekarang}<br>Kepala Sekolah,<br><br><br><br><br>
                 <b><u>${globalConf.nama_kepsek || '.......................'}</u></b><br>
                 NIP. ${globalConf.nip_kepsek || '-'}
             </div>
@@ -748,7 +748,7 @@ async function cetakPDF(nis) {
     `;
 
     // 4. Proses HTML menjadi PDF
-    var opt = { margin: 0.3, filename: 'Biodata_' + s[2] + '.pdf', image: { type: 'jpeg', quality: 0.98 }, html2canvas: { scale: 2 }, jsPDF: { unit: 'cm', format: 'A4', orientation: 'portrait' } };
+    var opt = { margin: 0.5, filename: 'Biodata_' + s[2] + '.pdf', image: { type: 'jpeg', quality: 0.98 }, html2canvas: { scale: 2 }, jsPDF: { unit: 'cm', format: 'A4', orientation: 'portrait' } };
     html2pdf().set(opt).from(html).save().then(() => { $('#loader').addClass('hidden'); });
 }
 
