--- a/demo-SiBukInSTal/index.html
+++ b/demo-SiBukInSTal/index.html
@@ -285,7 +285,7 @@
                                         <i class="bi bi-eye-slash"></i>
                                     </span>
                                 </div>
-                                <button type="submit" class="btn btn-sm btn-danger w-100 fw-bold">Update Admin</button>
+                               <!-- <button type="submit" class="btn btn-sm btn-danger w-100 fw-bold">Update Admin</button> -->
                             </form>
                             <form onsubmit="updateAccount(event, 'wakakurikulum')" class="p-3 bg-light border rounded">
                                 <h6 class="fw-bold small text-uppercase">Waka Kurikulum</h6>
@@ -296,7 +296,7 @@
                                         <i class="bi bi-eye-slash"></i>
                                     </span>
                                 </div>
-                                <button type="submit" class="btn btn-sm btn-success w-100 fw-bold">Update Waka</button>
+                               <!-- <button type="submit" class="btn btn-sm btn-success w-100 fw-bold">Update Waka</button> -->
                             </form>
                         </div>
                     </div>
@@ -811,7 +811,7 @@ async function cetakTranskrip() {
             <table class="tabel-nilai">
                 <thead>
                     <tr style="background-color:#eee;">
-                        <th rowspan="2" width="15%">Mata Pelajaran</th>
+                        <th rowspan="1" width="15%"> </th><th rowspan="1" width="15%">Mata Pelajaran</th>
                         <th colspan="3">Smt 1</th><th colspan="3">Smt 2</th><th colspan="3">Smt 3</th>
                         <th colspan="3">Smt 4</th><th colspan="3">Smt 5</th><th colspan="3">Smt 6</th>
                     </tr>
