--- a/demo-SiBukInSTal/index.html
+++ b/demo-SiBukInSTal/index.html
@@ -658,6 +658,7 @@ function openTranskrip(nis) {
         $('#loader').addClass('hidden'); 
         $('#tNamaSiswa').text(data.siswa[2] + " (" + data.siswa[0] + ")"); 
         $('#tNis').val(data.siswa[0]); 
+        $('#tNisn').val(data.siswa[1]); 
         const tb = $('#tbodyTranskrip').empty(); 
         data.transkrip.forEach(r => { 
             let row = `<tr><td class="text-start">${r.nama}</td>`; 
@@ -771,6 +772,7 @@ async function cetakPDF(nis) {
 // ==========================================
 async function cetakTranskrip() { 
     const nis = $('#tNis').val(); 
+    const nisn = $('#tNisn').val(); 
     const namaSiswa = $('#tNamaSiswa').text().split(' (')[0]; 
     $('#loader').removeClass('hidden'); 
 
@@ -805,13 +807,13 @@ async function cetakTranskrip() {
             <hr style="border:1px solid #000; margin: 10px 0;">
             <div style="text-align:center; font-weight:bold; margin:10px 0; font-size:12pt;">TRANSKRIP NILAI KOMPREHENSIF</div>
             <table style="width:100%; margin-bottom:10px; font-size:10pt;">
-                <tr><td width="15%">Nama</td><td>: ${namaSiswa}</td><td width="15%">NIS/NISN</td><td>: ${nis} / </td></tr>
+                <tr><td width="15%">Nama</td><td>: ${namaSiswa}</td><td width="15%">NIS/NISN</td><td>: ${nis} / ${nisn}</td></tr>
             </table>
             
             <table class="tabel-nilai">
                 <thead>
                     <tr style="background-color:#eee;">
-                        <th rowspan="1" width="15%"> </th><th rowspan="1" width="15%">Mata Pelajaran</th>
+                        <th rowspan="2" width="15%" style="text-align:top;>Mata Pelajaran</th>
                         <th colspan="3">Smt 1</th><th colspan="3">Smt 2</th><th colspan="3">Smt 3</th>
                         <th colspan="3">Smt 4</th><th colspan="3">Smt 5</th><th colspan="3">Smt 6</th>
                     </tr>
@@ -1007,7 +1009,7 @@ function exportTranskrip() {
     if(!nis) { showCoolAlert('Pilih Siswa','','warning'); return; } 
     const nama = $('#selSiswa option:selected').text().split(" - ")[1]; 
     $('#loader').removeClass('hidden'); 
-    callAPI('exportTranskripNilai', {nis: nis, nama: nama}).then(res => { 
+    callAPI('exportTranskripNilai', {nis: nis, nisn: nisn, nama: nama}).then(res => { 
         $('#loader').addClass('hidden'); 
         const blob = new Blob([res.csv], { type: 'text/csv' }); 
         const link = document.createElement('a'); 
