--- a/demo-SiBukInSTal/index.html
+++ b/demo-SiBukInSTal/index.html
@@ -813,7 +813,7 @@ async function cetakTranskrip() {
             <table class="tabel-nilai">
                 <thead>
                     <tr style="background-color:#eee;">
-                        <th rowspan="2" width="15%" style="text-align:top;>Mata Pelajaran</th>
+                        <th rowspan="2" width="15%" style="text-align:top;">Mata Pelajaran</th>
                         <th colspan="3">Smt 1</th><th colspan="3">Smt 2</th><th colspan="3">Smt 3</th>
                         <th colspan="3">Smt 4</th><th colspan="3">Smt 5</th><th colspan="3">Smt 6</th>
                     </tr>
