--- a/demo-SiBukInSTal/index.html
+++ b/demo-SiBukInSTal/index.html
@@ -768,24 +768,26 @@ async function cetakPDF(nis) {
 
 
 // ==========================================
-// 2. FUNGSI CETAK TRANSKRIP (GARIS TEGAS & SUPER CEPAT)
+// FUNGSI CETAK TRANSKRIP (DENGAN NIS/NISN)
 // ==========================================
 async function cetakTranskrip() { 
     const nis = $('#tNis').val(); 
-    const nisn = $('#tNisn').val(); 
     const namaSiswa = $('#tNamaSiswa').text().split(' (')[0]; 
+    
+    // --- TRIK BARU: Cari siswa di globalSiswa untuk mendapatkan NISN ---
+    const s = globalSiswa.find(x => x[0] == nis);
+    const nisn = s ? s[1] : '-'; // s[1] adalah urutan kolom NISN di databasemu
+
     $('#loader').removeClass('hidden'); 
 
     const tbodyHtml = $('#tbodyTranskrip').html();
     const tfootHtml = $('#tfootTranskrip').html();
 
-    // TRIK NGEBUT: Ambil Logo langsung dari layar
     const imgInstansi = $('#loginLogoInstansi').attr('src') || '';
     const imgSekolah = $('#loginLogoSekolah').attr('src') || '';
     
     const tglSekarang = new Date().toLocaleDateString('id-ID', {day: 'numeric', month: 'long', year: 'numeric'});
 
-    // PERHATIKAN tag <style> di bawah ini, ini yang membuat garis tabelnya muncul jelas!
     const html = `
         <div style="font-family: 'Arial', sans-serif; font-size: 9pt; color: #000; background: #fff;">
             <style>
@@ -813,7 +815,7 @@ async function cetakTranskrip() {
             <table class="tabel-nilai">
                 <thead>
                     <tr style="background-color:#eee;">
-                        <th rowspan="2" width="15%" style="text-align:top;">Mata Pelajaran</th>
+                        <th rowspan="2" width="15%" style="text:top-align;">Mata Pelajaran</th>
                         <th colspan="3">Smt 1</th><th colspan="3">Smt 2</th><th colspan="3">Smt 3</th>
                         <th colspan="3">Smt 4</th><th colspan="3">Smt 5</th><th colspan="3">Smt 6</th>
                     </tr>
