--- a/demo-SiKaPProfESi/index.html
+++ b/demo-SiKaPProfESi/index.html
@@ -1,3 +1,4 @@
+//https://script.google.com/a/macros/admin.sma.belajar.id/s/AKfycbzvR2EmYFq4tUJ-gXepAy1hyplz_i1Juuxp2kB5iZtOidMvJO3IQBgXJW4Zq_T-j6SN/exec
 
 <!DOCTYPE html>
 <html lang="id">
@@ -160,7 +161,7 @@ body { background: var(--light); color: var(--dark); font-size: 13px; }
 .logo-kanan { position: absolute; top: 7px; right: 10px; width: 40px; height: 40px; object-fit: contain; }
 .header-text-center { margin: 0 50px; }
 .txt-instansi-center { font-family: Arial Narrow, sans-serif; font-size: 12px; font-weight: 700; text-transform: uppercase; color: #000; }
-.txt-sekolah-center { font-family: Arial Narrow, sans-serif; font-size: 16px; font-weight: 750; text-transform: uppercase; margin: 1.5px 0; color: #000; }
+.txt-sekolah-center { font-family: Arial Narrow, sans-serif; font-size: 16px; font-weight: 750; text-transform: uppercase; margin: 1.1px 0; color: #000; }
 .txt-alamat-center { font-family: Arial Narrow, sans-serif; font-size: 9px; font-weight: 150; color: #000; margin-top: 0.5px; }
 .header-line { margin: 0 5px; height: 1px; border-top: 1px solid #000; border-bottom: 2px solid #000; margin-top: 4px; }
 .txt-kartupelajar-center { font-family: Arial, sans-serif; font-size: 18px; text-align: center; font-weight: 800; margin: 2px 0; color: #000; }
@@ -172,7 +173,7 @@ body { background: var(--light); color: var(--dark); font-size: 13px; }
 .info-table-new td { padding: 1px 0px; vertical-align: top; font-family: 'Oswald', sans-serif; font-size: 14px; font-weight: 400; line-height: 1; }
 .info-table-new .lbl { width: 60px; }
 .qr-area-new { position: absolute; bottom: 3px; right: 0px; background: white; padding: 3px; border: 0px solid #ccc; }
-#qrcode img { width: 90px; height: 90px; display:block; }
+.qrcode img { width: 90px; height: 90px; display:block; }
 .loader-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.9); z-index: 9999; display: flex; flex-direction: column; align-items: center; justify-content: center; color: white; }
 .spinner { width: 40px; height: 40px; border: 4px solid #fff; border-top-color: var(--primary); border-radius: 50%; animation: spin 1s linear infinite; }
 @keyframes spin { to { transform: rotate(360deg); } }
